hcunits/css/hcunits.css
/* Build Container styles */
#buildContainer {
    background-color: #F0F0F0;
}

/* Team Header styles */
#teamHeaderContainer {
    background: linear-gradient(135deg, rgb(169, 184, 195) 100%, rgb(238, 238, 238) 0%);
    padding: 30px, 0px;
}

#teamHeader {
    max-width: 50%;
    margin: auto;
    padding: 10px;
}

#teamHeader * {
    background-color: transparent;
    border-color: transparent;
    display: inline-block;
    margin: 0px;
}

#teamOwner {
    font-size: 18px;
}

.teamInput {
    padding: 0px;
    border: 1px solid transparent;
}

input#teamName {
    font-size: 24px;
}

.teamSelect {
    padding: 0px;
    border: 1px solid transparent;
    font-size: 12px;
    background-color: transparent;
}

#teamFormatContainer {
    display: flex;
    gap: 20px;
}

#teamPointLimit {
    flex-basis: max-content;
}

#teamFormat {
    flex-basis: max-content;
    align-self: flex-end;
}

#teamVisibility {
    flex-basis: max-content;
}

/* Search Source styles */
#searchSourceContainer {
    display: flex;
    align-items: center;
    gap: 10px;
    background-color: #212121;
    box-shadow: 0 2px 4px rgb(0, 0, 0, 50%);
    padding: 10px;
}

/* Quick Search styles */
#quickSearchContainer {
    display: flex;
    flex-basis: max-content;
    align-items: center;
    height: 60px;
    border: 1px solid #000000;
    border-radius: 5px;
    background-color: #FFFFFF;
}

#quickSearchInput {
    width: 250px;
    font-size: 20px;
    margin-left: 5px;
    margin-top: 15px;
    border: none;
}

#quickSearchInput:focus {
    border: none;
}

#quickSearchButton {
    width: 40px;
    height: 58px;
    border: none;
    border-radius: 5px;
}

#quickSearchIcon {
    font-variation-settings: 'FILL'0, 'wght'400, 'GRAD'0, 'opsz'25;
}

/* Set Menu styles */
#setMenuContainer {
    background-color: transparent;
}

#setMenu {
    display: flex;
    flex-wrap: nowrap;
    overflow-x: auto;
}

div.setItem {
    flex: 0 0 auto;
    width: 50px;
    padding-top: 2px;
    padding-bottom: 2px;
    text-align: center;
    color: #000000;
    border: 1px solid #000000;
    border-radius: 5px;
    background-color: #FFFFFF;
    display: inline-block;
}

img.setIcon {
    width: 32px;
    height: 32px;
    margin: 3px;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

div.setName {
    font-size: 10px;
    font-weight: bold;
}

/* Team Body styles */
#teamBodyContainer {
    display: flex;
    background-color: transparent;
}

/* Search Results styles */
#searchResultsContainer {
    border-right: 1px solid black;
    width: 300px;
    height: 1100px;

    display: flex;
    flex-direction: column;
    overflow-y: auto;
    padding: 0px;

    flex: 0 0 auto;
}

#searchResultsScroll {
    overflow-y: auto;
    overflow-x: hidden;
}

#searchResults li {
    min-height: 0px;
    padding: 0px !important;
}

#searchResults li a {
    padding: 10px 20px !important;
    display: block;
}

#searchResults li a:hover {
    background-color: #f5f5f5;
}

#searchResults li a:focus {
    background-color: #e5e5e5;
    outline: none;
}

#searchResults li a:active {
    background-color: #d8d8d8;
}

.searchResultInfo {
    padding-left: 50px !important;
}

.searchResultPoints {
    left: 50px;
    font-size: 10px !important;
}

/* Unit area styles */
#unitContainer {
    flex: 0 0 auto;
    position: relative;
    width: 400px;
    height: 1100px;
}

#unitFront {
    position: absolute;
    top: 20px;
    left: 20px;
    width: 375px;
    /*height: 375px;*/
    height: 525px;
}

#unitFrontBorders {
    position: absolute;
    left: 0px;
    top: 0px;
    width: 100%;
    height: 100%;
    border-top: 75px solid black;
    border-radius: 15px;
    background-color: white;
    box-shadow: rgba(0, 0, 0, 0.8) 0 0 10px;
}

#unitHeader {
    position: absolute;
    left: 3px;
    top: 2px;
    width: 225px;
    color: white;
    text-align: center;
    line-height: normal;
}

#unitName {
    font-family: arial black, sans-serif;
    font-size: 19px;
    font-style: italic;
    line-height: .9em;
}

#unitKeywords {
    font-size: 10px;
    line-height: 1em;
}

.unitKeyword {
    color: white;
}

#unitRealName {
    position: absolute;
    left: 7px;
    top: 62px;
    width: 225px;
    color: white;
    font-family: arial, sans-serif;
    font-size: 9px;
    text-align: left;
}

#unitCollectorNumber {
    position: absolute;
    left: 340px;
    font-size: 11px;
    color: white;
}

#unitImage {
    position: absolute;
    left: 215px;
    top: 15px;
    width: 150px;
    height: 150px;
    border: 7px solid black;
    background-color: white;
    border-radius: 75px;
}

.unitSpecialPowersTable {
    font-size: 10px;
    table-layout: auto;
    width: 48%;
}

#unitSpecialPowersTable1 {
    position: absolute;
    left: 5px;
    top: 80px;
}

#unitSpecialPowersTable2 {
    position: absolute;
    right: 5px;
    top: 165px;
}

.unitSpecialPowerRow {
    border-bottom: none !important;
}

.unitSpecialPower {
  vertical-align: top;
    padding: 0px 3px 5px 0px !important;
}

#unitDial {
    position: absolute;
    bottom: 70px;
    width: 325px;
    height: 130px;
    border: 5px solid black;
    border-radius: 0px 15px 15px 0px;
}

.unitCombatSymbol {
    position: absolute;
    width: 28px;
    height: 24px;
    top: 0px;
    border-top-right-radius: 10px 12px;
    border-bottom-right-radius: 10px 12px;
    background-color: black;
}

#unitRange {
    position: absolute;
    right: 20px;
    top: 4px;
    color: white;
    font-size: 11px;
    font-family: 'Gill Sans', sans-serif;
    font-weight: 300;
}

.unitBolt {
    position: absolute;
    top: 6px;
}

#unitCombatSymbolSpeed {
    position: absolute;
    top: 24px;
}

#unitCombatSymbolAttack {
    position: absolute;
    top: 48px;
}

#unitCombatSymbolDefense {
    position: absolute;
    top: 72px;
}

#unitCombatSymbolDamage {
    position: absolute;
    top: 96px;
}

.unitCombatSymbolImg {
    position: absolute;
    right: 7px;
    top: 2px;
}

#unitDialTable {
    position: absolute;
    left: 30px;
    top: -2px;
    width: 280px;
    table-layout: fixed;
    border-collapse: separate;
    border-spacing: 3px !important;
}

.unitDialHeader {
    color: red;
    padding: 0px 0px !important;
    text-align: center;
    width: 8.3%;
    font-size: 10px;
    font-family: 'Gill Sans', sans-serif;
    font-weight: 300;
}

.unitDialRow {
    height: 21px;
    border-bottom: none !important;
    line-height: normal;
}

.unitDialEntry {
    text-align: center;
    font-family: 'Gill Sans', sans-serif;
    font-weight: 300;
    box-sizing: border-box;
    padding: 0px 0px !important;
    border-radius: 0px;
    /*border: 2px solid red;*/
    margin: 2px;
    line-height: normal;
    font-size: 14px;
}

.unitDialEntryKO {
    padding: 0px 0px !important;
    text-align: center;
    font-family: comic sans ms;
    font-weight: 700;
    color: red;
    font-size: 14px;
}

#unitTeamAbilities {
    position: absolute;
    right: 0px;
    bottom: 70px;
    width: 45px;
    height: 130px;
    background-color: black;
    border-radius: 12px 0px 0px 12px;
}

#unitTeamAbility0 {
    position: absolute;
    left: 10px;
    top: 10px;
}

#unitTeamAbility1 {
    position: absolute;
    left: 10px;
    top: 55px;
}

#unitTeamAbility2 {
    position: absolute;
    left: 10px;
    top: 100px;
}

#unitPointValue {
    position: absolute;
    left: 0px;
    bottom: 40px;
    width: 182px;
    height: 24px;
    color: white;
    background-color: black;
    border-radius: 0px 12px 12px 0px;
    font-size: 16px;
    font-family: arial, sans-serif;
    text-align: center;
}

#unitHeroClixLogoClip {
    position: absolute;
    width: 132px;
    height: 25px;
    bottom: 10px;
    overflow: hidden;
}

#unitHeroClixLogo {
    position: absolute;
    left: -5px;
}

#unitBack {
    position: absolute;
    top: 550px;
    left: 20px;
}

#unitBackBorders {
    position: absolute;
    left: 0px;
    top: 0px;
    width: 375px;
    height: 525px;
    right: 100%;
    bottom: 100%;
    border-top: 15px solid black;
    border-bottom: 15px solid black;
    border-radius: 15px;
    background-color: white;
}

.tooltip {
    position: relative;
    display: inline-block;
    line-height: normal;
}

.tooltip .tooltiptext {
    visibility: hidden;
    width: 200px;
    bottom: 100%;
    left: 100%;
    background-color: white;
    border: 1px solid black;
    color: black;
    text-align: center;
    padding: 5px 0;
    border-radius: 6px;
    
    position: absolute;
    z-index: 1;
    font-family: Roboto;
    font-weight: normal;
}

.tooltip:hover .tooltiptext {
    visibility: visible;
}

#teamContainer {
    flex: 1 1 auto;
    min-width: 600px;
}

